# pet-food-advice-scraper

./: README.md  app.py  app_correlation.py  app_data_transformation.py  app_sidebar.py  main.py  products_urls.json  pyproject.toml
app/: correlation.py  sidebar.py
files/: 2024-02-11_1281_products_urls.json  2024-02-11_1812_product_data.csv  2024-02-11_9095_product_urls.json  2024-02-12_product_data.csv  2024-02-13_petsmart_products.csv
scraper/: pet_food.py  petsmart_products_urls.py  product.py  product_fetch.py  url_collector.py  utils.py
utils/: csv.py  json.py  others.py
